<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".splashscreen">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/mainIMAGE"
        android:layout_centerInParent="true"
        android:src="@drawable/eduh"
        android:contentDescription="@string/TODO">

    </ImageView>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/maintext"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/from"
        android:textColor="#7C4DFF"
        android:textColorHint="@color/black"
        android:textSize="11sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hunker_tech"
        android:id="@+id/maintext"
        android:layout_alignParentBottom="true"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp">


    </TextView>


</RelativeLayout>